test: 변경된 파싱 및 임포트 로직에 맞춰 테스트 코드 수정